@@ -21,7 +21,12 @@ gateway = 0
 ;   192.168.0.* - wildcards
 ;   192.168.0.1-192.168.0.255 - ranges
 ;   192.168.0.1/24 - CIDR
+;
+; This setting is ignored with allowlocal = 1
 allow = *.*.*.*
+
+; Allow connections from all local interfaces (refreshed every 30 seconds) - default: 0
+allowlocal = 0
 
 ; Direct connect to following subnets, comma separated
 ;   Skip the NTLM proxy and connect directly like a regular proxy
